--- a/reddit_eda.ipynb
+++ b/reddit_eda.ipynb
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1070,7 @@
     "plt.plot(zip_asx['Date'], zip_asx['ASX_Close_scaled'], label='Z1P')\n",
     "plt.plot(zip_grouped['Date'], zip_grouped['ASX_Code_scaled'], label='Mentions')\n",
     "plt.title('Z1P mentions on ASX_Bets vs ASX Closing Price for Z1P')\n",
-    "plt.savefig('./zip_asx_bets_vs_asx_price', format='svg')\n",
+    "plt.savefig('./zip_asx_bets_vs_asx_price.png', format='png')\n",
     "\n",
     "plt.legend();"
    ]
