--- a/reddit_eda.ipynb
+++ b/reddit_eda.ipynb
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1389,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1900,7 +1900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1926,17 +1926,27 @@
        "QAN     174\n",
        "KMD     171\n",
        "CEO     170\n",
+       "IMO     155\n",
+       "FLT     153\n",
+       "REPL    150\n",
+       "OPY     142\n",
+       "AUD     141\n",
+       "GEAR    141\n",
+       "CSL     136\n",
+       "ALL     135\n",
+       "BHP     131\n",
+       "CCP     130\n",
        "Name: ASX_Code, dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# list of the 20 most mentioned stocks across both forums.\n",
-    "both_df['ASX_Code'].value_counts().head(20)"
+    "both_df['ASX_Code'].value_counts().head(30)"
    ]
   },
   {
@@ -2384,7 +2394,7 @@
     "plt.plot(opy_asx['Date'], opy_asx['ASX_Close_scaled'], label='OPY.AX')\n",
     "plt.plot(opy_df['Date'], opy_df['ASX_Code_scaled'], label='Mentions')\n",
     "plt.title('OPY mentions on ASX_Bets vs ASX Closing Price for OPY')\n",
-    "\n",
+    "plt.savefig('./ip_asx_bets_vs_asx_price.png', format='png')\n",
     "plt.legend();"
    ]
   },
